Label point-like objects (#15)
* Re-write of bgt_fuser module to work with point objects.

* Notebook for BGT point fusion.

* Demo datasets for BGT.

* Add label for traffic signs.

* Fix in ahn_utils.load_ahn_tile to prevent numeric overflow errors due to 16 bit storage.

* Some changes to LabelConnetcedComp class. Added a method to get the components without doing any labelling.

* Added box_clip for clipping 3D boxes.

* Code for nicer printing of labels.

* Optional padding added to get_bbox_from_tile_code().

* Small fixes in notebooks.

* Bug fix in GeoTiffReader.

* Everything now based on a single abstract class `AbstractProcessor`.

* Re-ordered and re-named notebooks.

* Added plot_utils.

* Updated README and gif.

* Fix in LCC (unmask own label).

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -26,6 +26,7 @@
     "import src.fusion as fusion\n",
     "import src.region_growing as growing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.plot_utils as plot_utils\n",
     "from src.pipeline import Pipeline\n",
     "from src.utils.labels import Labels"
    ]
@@ -45,15 +46,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cf2883a-1fd1-4c20-849f-5f7103c802a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up.\n",
+    "\n",
+    "# AHN data folder.\n",
+    "ahn_data_folder = '../datasets/ahn/'\n",
+    "# File with BGT road polygons.\n",
+    "bgt_road_file = '../datasets/bgt/bgt_roads_' + tile_code + '.csv'\n",
+    "# File with <x,y> coordinates of pole-like objects.\n",
+    "bgt_point_file = '../datasets/bgt/custom_points_' + tile_code + '.csv'\n",
+    "\n",
+    "# Some methods use AHN elevation data to determine the height above ground.\n",
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "turned-softball",
    "metadata": {},
    "source": [
+    "---\n",
     "## Data Fusion\n",
     "\n",
+    "### Ground and Buildings\n",
     "First, we use data fusion to automatically label ground and building points.\n",
     "\n",
-    "For details and more options, see [2. Data fusion](2.%20Data%20fusion.ipynb)."
+    "For details and more options, see notebook [2. Ground and Buildings](2.%20Ground%20and%20Buildings.ipynb)."
    ]
   },
   {
@@ -63,9 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data folder for the fusers.\n",
-    "ahn_data_folder = '../datasets/ahn/'\n",
-    "\n",
     "# Ground fuser using pre-processed AHN data.\n",
     "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
     "                                   method='npz', target='ground', epsilon=0.2)\n",
@@ -76,14 +96,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "secret-packaging",
+   "metadata": {},
+   "source": [
+    "### Cars\n",
+    "\n",
+    "Then we label cars by searching for 'car-like' clusters above road segments.\n",
+    "\n",
+    "For details and on how to generate the BGT road csv file, see notebook [3. Cars](3.%20Cars.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "intense-summit",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Car fuser using a clustering algorithm and BGT road data.\n",
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
+    "                            bgt_file=bgt_road_file, octree_level=10,\n",
+    "                            min_component_size=100, max_above_ground=3,\n",
+    "                            min_width_thresh=1.5, max_width_thresh=2.55,\n",
+    "                            min_length_thresh=2.0, max_length_thresh=7.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bac6c70-c67c-440f-9c93-7790b172db05",
+   "metadata": {},
+   "source": [
+    "### Pole-like objects\n",
+    "\n",
+    "Finally we look for 'pole-like' objects such as trees, street lights and traffic signs.\n",
+    "\n",
+    "For details and more options, see notebook [4. Pole-like objects](4.%20Pole-like%20objects.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7f0a685-2525-40ab-bd8f-eff7f94a97fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameter settings for each type of object.\n",
+    "tree_params = {'seed_height': 1.75, 'min_points': 500, 'max_r': 0.5, 'label_height': 5.}\n",
+    "light_params = {'seed_height': 2.25, 'min_points': 400, 'max_r': 0.2, 'label_height': 5.}\n",
+    "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
+    "\n",
+    "# Fusers for BGT point data.\n",
+    "tree_fuser = fusion.BGTPointFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=tree_params)\n",
+    "light_fuser = fusion.BGTPointFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=light_params)\n",
+    "sign_fuser = fusion.BGTPointFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=sign_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "literary-source",
    "metadata": {},
    "source": [
+    "---\n",
     "## Region Growing\n",
+    "\n",
+    "### Buildings\n",
     "\n",
     "Then, we use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly.\n",
     "\n",
-    "For details, installation instructions and more options, see [3. Region growing](3.%20Region%20growing.ipynb)."
+    "For details, installation instructions and more options, see notebook [5. Region growing](5.%20Region%20growing.ipynb)."
    ]
   },
   {
@@ -94,40 +174,46 @@
    "outputs": [],
    "source": [
     "# Region growing with building points as initial seed points. \n",
-    "exclude_labels = (Labels.GROUND,)\n",
-    "building_grower = growing.LabelConnectedComp(Labels.BUILDING, exclude_labels,\n",
-    "                                             octree_level=10, min_component_size=100)"
+    "building_grower = growing.LabelConnectedComp(Labels.BUILDING, octree_level=10, min_component_size=100)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "secret-packaging",
+   "id": "eec09ab7-c0d3-4e0f-9412-fd714c05e1d2",
    "metadata": {},
    "source": [
-    "## Label car like objects\n",
-    "Now, we divide the leftover points in clusters and determine car like objects. \n",
+    "### Pole-like objects\n",
     "\n",
-    "For details and on how to generate the BGT road csv file, see [4. Label cars](4.%20Label%20cars.ipynb)."
+    "We also use region growing to refine the pole-like objects. We do this separately for the top and bottom since the best settings for each might differ.\n",
+    "\n",
+    "For details and more options, see notebook [4. Pole-like objects](4.%20Pole-like%20objects.ipynb)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intense-summit",
+   "id": "48e1670c-58c8-476a-ae85-5b0ab7ec241c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# File with road information from BGT.\n",
-    "bgt_data_file = '../datasets/bgt/bgt_roads.csv'\n",
+    "light_top_params = {'plane_height': 3.25, 'threshold': 0.05}\n",
+    "light_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
-    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
+    "sign_top_params = {'plane_height': 1.5, 'threshold': 0.05}\n",
+    "sign_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
-    "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
-    "                            bgt_file=bgt_data_file, octree_level=10,\n",
-    "                            min_component_size=100, max_above_ground=3,\n",
-    "                            min_width_thresh=1.5, max_width_thresh=2.55,\n",
-    "                            min_length_thresh=2.0, max_length_thresh=7.0)"
+    "tree_top_params = {'plane_height': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
+    "tree_bottom_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
+    "\n",
+    "light_grower = growing.TopBottomLCC(Labels.STREET_LIGHT, ahn_reader, \n",
+    "                                    top_params=light_top_params, \n",
+    "                                    bottom_params=light_bottom_params)\n",
+    "sign_grower = growing.TopBottomLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
+    "                                   top_params=sign_top_params, \n",
+    "                                   bottom_params=sign_bottom_params)\n",
+    "tree_grower = growing.TopBottomLCC(Labels.TREE, ahn_reader, \n",
+    "                                   top_params=tree_top_params, \n",
+    "                                   bottom_params=tree_bottom_params)"
    ]
   },
   {
@@ -135,6 +221,7 @@
    "id": "collaborative-durham",
    "metadata": {},
    "source": [
+    "---\n",
     "## Process the file"
    ]
   },
@@ -146,7 +233,8 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, npz_building_fuser, building_grower, car_fuser)\n",
+    "process_sequence = (npz_ground_fuser, npz_building_fuser, car_fuser, tree_fuser, light_fuser, sign_fuser, \n",
+    "                    building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(process_sequence)\n",
     "\n",
     "start = time.time()\n",
@@ -158,12 +246,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neural-welsh",
+   "id": "660ca8b6-26a2-4ee3-87b1-30e3bcda1104",
    "metadata": {},
    "source": [
-    "## View the result (e.g. in CloudCompare)\n",
+    "---\n",
+    "## View the result\n",
     "\n",
-    "The final result can be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change `Colors` from \"RGB\" to \"Scalar field\".\n",
+    "To get a quick look at the result, we can plot a slice of the labelled point cloud at a specified height."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44123d20-b21e-422c-915a-05baa4da56c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget\n",
+    "plot_utils.plot_cloud_slice(out_file, ahn_reader, plane_height=1.4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "814efd8d-09cf-4697-9e58-3c8d2ae3e984",
+   "metadata": {},
+   "source": [
+    "### In CloudCompare\n",
+    "The final result can also be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change `Colors` from \"RGB\" to \"Scalar field\". For best results, use our [custom color scale](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/cc_color_scale.xml), and set \"steps\" to 100.\n",
     "\n",
     "The result should look like this:\n",
     "![Demo result](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/examples/demo_result.png)"
