--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -177,7 +177,7 @@
    "source": [
     "# Set-up full AHN pipeline.\n",
     "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "pipeline = Pipeline(fusers=fusers)"
+    "pipeline = Pipeline(process_sequence=fusers)"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "source": [
     "# ALTERNATIVE: Set-up AHN GeoTIFF + BGT pipeline.\n",
     "fusers = (geotiff_ground_fuser, bgt_building_fuser)\n",
-    "pipeline = Pipeline(fusers=fusers)"
+    "pipeline = Pipeline(process_sequence=fusers)"
    ]
   },
   {
@@ -208,8 +208,10 @@
    "outputs": [],
    "source": [
     "# Select the file to process. The outfile can be set to 'None' to overwrite the file.\n",
-    "in_file = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
-    "out_file = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
+    "tilecode = '2386_9702'\n",
+    "\n",
+    "in_file = '../datasets/pointcloud/filtered_' + tilecode + '.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Process the file.\n",
     "start = time.time()\n",
@@ -270,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
