--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -50,8 +50,10 @@
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
-    "in_file = '../datasets/pointcloud/grown_2386_9702.laz'\n",
-    "out_file = '../datasets/pointcloud/cars_2386_9702.laz'\n",
+    "tilecode = '2386_9702'\n",
+    "\n",
+    "in_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Data folder for the fusers.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
@@ -66,7 +68,7 @@
    "outputs": [],
    "source": [
     "# Specify the bounding box of the area we want to scrape.\n",
-    "bbox = las_utils.get_bbox_from_las_folder(pc_data_folder)\n",
+    "bbox = las_utils.get_bbox_from_tile_code(tilecode)\n",
     "\n",
     "# Road parking spots layers in BGT\n",
     "bgt_layers = [\"BGT_WGL_rijbaan_lokale_weg\", \"BGT_WGL_parkeervlak\",\n",
@@ -88,13 +90,11 @@
     "    json_content = ams_bgt_scraper.scrape_amsterdam_bgt(layer, bbox=bbox)\n",
     "    \n",
     "    # Parse the downloaded json response.\n",
-    "    parsed_content, csv_headers = ams_bgt_scraper.parse_polygons(json_content,\n",
-    "                                                                 offset_meter=-0.3, \n",
-    "                                                                 prepare_csv=True)\n",
+    "    parsed_content, csv_headers = ams_bgt_scraper.parse_polygons(json_content, prepare_csv=True)\n",
     "    bgt_road_polygons_csv += parsed_content\n",
     "\n",
     "# Write the csv\n",
-    "bgt_data_file = '../datasets/bgt/bgt_roads.csv'\n",
+    "bgt_data_file = '../datasets/bgt/bgt_roads_' + tilecode + '.csv'\n",
     "csv_utils.write_csv(bgt_data_file, bgt_road_polygons_csv, csv_headers)"
    ]
   },
