--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -20,10 +20,8 @@
     "# Add project src to path.\n",
     "import set_path\n",
     "\n",
-    "import numpy as np\n",
     "import time\n",
     "\n",
-    "from src.utils.las_utils import label_and_save_las\n",
     "from src.utils.labels import Labels\n",
     "import src.region_growing as growing\n",
     "from src.pipeline import Pipeline"
@@ -37,7 +35,6 @@
    "source": [
     "# In this example we want to grow the building points, the initial seed points.\n",
     "# The ground points must be removed to fast and properly cluster the cloud.\n",
-    "seed_point_label = Labels.BUILDING\n",
     "exclude_labels = (Labels.GROUND,)"
    ]
   },
@@ -62,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Region growing with building points as initial seed points. \n",
-    "region_growing_pcl = growing.RegionGrowing(Labels.BUILDING, exclude_labels)"
+    "region_growing_pcl = growing.RegionGrowing(label=Labels.BUILDING, exclude_labels=exclude_labels)"
    ]
   },
   {
@@ -87,7 +84,7 @@
    "outputs": [],
    "source": [
     "# Region growing with building points as initial seed points. \n",
-    "region_growing_clustering = growing.LabelConnectedComp(Labels.BUILDING, exclude_labels,\n",
+    "region_growing_clustering = growing.LabelConnectedComp(label=Labels.BUILDING, exclude_labels=exclude_labels,\n",
     "                                                       octree_level=10, min_component_size=100)"
    ]
   },
@@ -106,7 +103,7 @@
    "source": [
     "# Set-up region growing based on PCL pipeline.\n",
     "growers = (region_growing_pcl,)\n",
-    "pipeline = Pipeline(region_growing=growers)"
+    "pipeline = Pipeline(process_sequence=growers)"
    ]
   },
   {
@@ -117,7 +114,7 @@
    "source": [
     "# Set-up clustering based region growing pipeline.\n",
     "growers = (region_growing_clustering,)\n",
-    "pipeline = Pipeline(region_growing=growers)"
+    "pipeline = Pipeline(process_sequence=growers)"
    ]
   },
   {
@@ -134,8 +131,10 @@
    "outputs": [],
    "source": [
     "# Select the file to process. The outfile can be set to 'None' to overwrite the file.\n",
-    "in_file = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
-    "out_file = '../datasets/pointcloud/grown_2386_9702.laz'\n",
+    "tilecode = '2386_9702'\n",
+    "\n",
+    "in_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Process the file.\n",
     "start = time.time()\n",
@@ -193,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
