--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -57,7 +57,8 @@
     "\n",
     "# Data folder for the fusers.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
-    "pc_data_folder = '../datasets/pointcloud/'"
+    "pc_data_folder = '../datasets/pointcloud/'\n",
+    "bgt_data_file = '../datasets/bgt/bgt_roads_' + tilecode + '.csv'"
    ]
   },
   {
@@ -94,7 +95,6 @@
     "    bgt_road_polygons_csv += parsed_content\n",
     "\n",
     "# Write the csv\n",
-    "bgt_data_file = '../datasets/bgt/bgt_roads_' + tilecode + '.csv'\n",
     "csv_utils.write_csv(bgt_data_file, bgt_road_polygons_csv, csv_headers)"
    ]
   },
@@ -113,7 +113,7 @@
     "# Car fuser using a clustering algorithm and BGT road data.\n",
     "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
     "                            bgt_file=bgt_data_file, octree_level=10,\n",
-    "                            min_component_size=100, max_above_ground=3,\n",
+    "                            min_component_size=1000, max_above_ground=3,\n",
     "                            min_width_thresh=1.5, max_width_thresh=2.55,\n",
     "                            min_length_thresh=2.0, max_length_thresh=7.0)"
    ]
