--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -159,11 +159,11 @@
     "---\n",
     "## Region Growing\n",
     "\n",
+    "We use region growing based on labelling of connected components. For details and other options see notebook [5. Region growing](5.%20Region%20growing.ipynb).\n",
+    "\n",
     "### Buildings\n",
     "\n",
-    "Then, we use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly.\n",
-    "\n",
-    "For details, installation instructions and more options, see notebook [5. Region growing](5.%20Region%20growing.ipynb)."
+    "We use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly."
    ]
   },
   {
@@ -173,8 +173,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Region growing with building points as initial seed points. \n",
+    "# Region growing with building points as initial seed points.\n",
     "building_grower = growing.LabelConnectedComp(Labels.BUILDING, octree_level=10, min_component_size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfe6c884-319c-42e1-9534-b438c323646a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can also do this separately for the top and bottom since the best settings for each might differ.\n",
+    "building_top_params = {'plane_height': 2., 'octree_level': 10, 'threshold': 0.1}\n",
+    "building_bottom_params = {'plane_height': 2., 'octree_level': 10, 'threshold': 0.8}\n",
+    "\n",
+    "building_grower = growing.TopBottomLCC(Labels.BUILDING, ahn_reader, \n",
+    "                                       top_params=building_top_params, \n",
+    "                                       bottom_params=building_bottom_params)"
    ]
   },
   {
