--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -96,6 +96,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8056c332",
+   "metadata": {},
+   "source": [
+    "### Noise filter\n",
+    "Before actually performing the building fusion, we detect and remove outliers and noise (i.e. wrong measurements) from the point cloud."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94aad450",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Noise filter using a clustering algorithm and AHN elevation data.\n",
+    "noise_filter = fusion.NoiseFilter(Labels.NOISE, ahn_reader, epsilon=0.2, min_component_size=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "secret-packaging",
    "metadata": {},
    "source": [
@@ -233,8 +253,8 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, npz_building_fuser, car_fuser, tree_fuser, light_fuser, sign_fuser, \n",
-    "                    building_grower, light_grower, sign_grower, tree_grower)\n",
+    "process_sequence = (npz_ground_fuser, noise_filter, npz_building_fuser, car_fuser, tree_fuser,\n",
+    "                    light_fuser, sign_fuser, building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(process_sequence)\n",
     "\n",
     "start = time.time()\n",
