Basic logging using the python logging module.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -27,6 +27,7 @@
     "import src.region_growing as growing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.plot_utils as plot_utils\n",
+    "import src.utils.log_utils as log_utils\n",
     "from src.pipeline import Pipeline\n",
     "from src.utils.labels import Labels"
    ]
@@ -63,6 +64,22 @@
     "\n",
     "# Some methods use AHN elevation data to determine the height above ground.\n",
     "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ec7ecd1-c736-4777-9bf5-03abb54f7849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up logging\n",
+    "logfile = 'pipeline.log'\n",
+    "log_utils.reset_logger()\n",
+    "log_utils.add_console_logger()\n",
+    "\n",
+    "# Optional\n",
+    "log_utils.add_file_logger(logfile)"
    ]
   },
   {
