Add check if logfile exists, and option to clear the file if desired.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -65,8 +65,8 @@
     "\n",
     "# INFO messages will be printed to console.\n",
     "log_utils.add_console_logger()\n",
-    "# All messages will be printed to a file.\n",
-    "log_utils.add_file_logger(logfile)"
+    "# All messages will be printed to a file. Use `clear_log` flag to clear the log file, if desired.\n",
+    "log_utils.add_file_logger(logfile, clear_log=True)"
    ]
   },
   {
@@ -342,8 +342,8 @@
     "\n",
     "# Only ERROR messages will be printed to console.\n",
     "log_utils.add_console_logger(level=logging.ERROR)\n",
-    "# All messages will be printed to a file.\n",
-    "log_utils.add_file_logger(logfile)"
+    "# All messages will be printed to a file. Use `clear_log` flag to clear the log file, if desired.\n",
+    "log_utils.add_file_logger(logfile, clear_log=True)"
    ]
   },
   {
