Moved AHN surface plotting tool to plot_utils. Added a BGT plot tool.

--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -28,7 +28,8 @@
     "\n",
     "import src.preprocessing.ahn_preprocessing as ahn_preprocessing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
-    "import src.utils.las_utils as las_utils"
+    "import src.utils.las_utils as las_utils\n",
+    "import src.utils.plot_utils as plot_utils"
    ]
   },
   {
@@ -150,26 +151,7 @@
    "outputs": [],
    "source": [
     "# Optional: plot the resulting surfaces.\n",
-    "\n",
-    "%matplotlib widget\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10,5))\n",
-    "im1 = ax1.imshow(ahn_tile['ground_surface'].astype('float64'), interpolation='none')\n",
-    "im2 = ax2.imshow(ahn_tile['building_surface'].astype('float64'), interpolation='none')\n",
-    "ax1.set_title('Ground surface')\n",
-    "ax1.set_xticks(range(0, 501, 100))\n",
-    "ax1.set_xticklabels(np.arange(ahn_tile['x'][0], ahn_tile['x'][-1]+1, 10, dtype=int))\n",
-    "ax1.set_yticks(range(501, 0, -100))\n",
-    "ax1.set_yticklabels(np.arange(ahn_tile['y'][-1], ahn_tile['y'][0]+1, 10, dtype=int))\n",
-    "ax2.set_title('Building surface')\n",
-    "ax2.set_xticks(range(0, 501, 100))\n",
-    "ax2.set_xticklabels(np.arange(ahn_tile['x'][0], ahn_tile['x'][-1]+1, 10, dtype=int))\n",
-    "ax2.set_yticks([])\n",
-    "plt.colorbar(im1, ax=ax1, fraction=0.046, pad=0.04)\n",
-    "plt.colorbar(im2, ax=ax2, fraction=0.046, pad=0.04)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "plot_utils.plot_ahn_sidebyside(ahn_tile)"
    ]
   },
   {
