Improved X/Y ticks, added option to hide noise.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -283,7 +283,7 @@
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
-    "plot_utils.plot_cloud_slice(out_file, ahn_reader, plane_height=1.4)"
+    "plot_utils.plot_cloud_slice(out_file, ahn_reader, plane_height=1.4, hide_noise=True)"
    ]
   },
   {
