--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -21,28 +21,15 @@
     "import set_path\n",
     "\n",
     "# Import modules.\n",
-    "import time\n",
+    "import logging\n",
     "\n",
     "import src.fusion as fusion\n",
     "import src.region_growing as growing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.plot_utils as plot_utils\n",
+    "import src.utils.log_utils as log_utils\n",
     "from src.pipeline import Pipeline\n",
     "from src.utils.labels import Labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "western-seller",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select the file to process.\n",
-    "tile_code = '2386_9702'\n",
-    "\n",
-    "in_file = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
-    "out_file = '../datasets/pointcloud/complete_' + tile_code + '.laz'"
    ]
   },
   {
@@ -57,12 +44,29 @@
     "# AHN data folder.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
     "# File with BGT road polygons.\n",
-    "bgt_road_file = '../datasets/bgt/bgt_roads_' + tile_code + '.csv'\n",
+    "bgt_road_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
     "# File with <x,y> coordinates of pole-like objects.\n",
-    "bgt_point_file = '../datasets/bgt/custom_points_' + tile_code + '.csv'\n",
+    "bgt_point_file = '../datasets/bgt/custom_points_demo.csv'\n",
     "\n",
     "# Some methods use AHN elevation data to determine the height above ground.\n",
     "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ec7ecd1-c736-4777-9bf5-03abb54f7849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up logging.\n",
+    "logfile = '../datasets/pointcloud/pipeline.log'\n",
+    "log_utils.reset_logger()\n",
+    "\n",
+    "# INFO messages will be printed to console.\n",
+    "log_utils.add_console_logger()\n",
+    "# All messages will be printed to a file. Use `clear_log` flag to clear the log file, if desired.\n",
+    "log_utils.add_file_logger(logfile, clear_log=True)"
    ]
   },
   {
@@ -179,11 +183,11 @@
     "---\n",
     "## Region Growing\n",
     "\n",
+    "We use region growing based on labelling of connected components. For details and other options see notebook [5. Region growing](5.%20Region%20growing.ipynb).\n",
+    "\n",
     "### Buildings\n",
     "\n",
-    "Then, we use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly.\n",
-    "\n",
-    "For details, installation instructions and more options, see notebook [5. Region growing](5.%20Region%20growing.ipynb)."
+    "We use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly."
    ]
   },
   {
@@ -193,8 +197,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Region growing with building points as initial seed points. \n",
+    "# Region growing with building points as initial seed points.\n",
     "building_grower = growing.LabelConnectedComp(Labels.BUILDING, octree_level=10, min_component_size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfe6c884-319c-42e1-9534-b438c323646a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can also do this separately for the top and bottom since the best settings for each might differ.\n",
+    "building_top_params = {'plane_height': 2., 'octree_level': 10, 'threshold': 0.1}\n",
+    "building_bottom_params = {'plane_height': 2., 'octree_level': 10, 'threshold': 0.8}\n",
+    "\n",
+    "building_grower = growing.TopBottomLCC(Labels.BUILDING, ahn_reader, \n",
+    "                                       top_params=building_top_params, \n",
+    "                                       bottom_params=building_bottom_params)"
    ]
   },
   {
@@ -216,10 +236,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "light_top_params = {'plane_height': 3.25, 'threshold': 0.05}\n",
-    "light_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
+    "light_top_params = {'plane_height': 1.75, 'octree_level': 9, 'threshold': 0.05}\n",
+    "light_bottom_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
-    "sign_top_params = {'plane_height': 1.5, 'threshold': 0.05}\n",
+    "sign_top_params = {'plane_height': 1.5, 'octree_level': 9, 'threshold': 0.05}\n",
     "sign_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
     "tree_top_params = {'plane_height': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
@@ -238,11 +258,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c2427a7-6113-44fe-9ca9-fd74ebb08659",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Set-up the pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "820b612b-375e-48f6-a8bb-9261fa556fc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up pipeline.\n",
+    "process_sequence = (npz_ground_fuser, noise_filter, npz_building_fuser, car_fuser, tree_fuser,\n",
+    "                    light_fuser, sign_fuser, building_grower, light_grower, sign_grower, tree_grower)\n",
+    "pipeline = Pipeline(process_sequence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "collaborative-durham",
    "metadata": {},
    "source": [
     "---\n",
-    "## Process the file"
+    "## Process a single file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14fcbc07-1514-4037-8f1f-2ea4beaefc1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select the file to process.\n",
+    "tile_code = '2386_9702'\n",
+    "\n",
+    "in_file = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
+    "out_file = '../datasets/pointcloud/processed_' + tile_code + '.laz'"
    ]
   },
   {
@@ -252,16 +308,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, noise_filter, npz_building_fuser, car_fuser, tree_fuser,\n",
-    "                    light_fuser, sign_fuser, building_grower, light_grower, sign_grower, tree_grower)\n",
-    "pipeline = Pipeline(process_sequence)\n",
+    "pipeline.process_file(in_file, out_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "343b1355-d6a7-406f-ab95-e75bee962229",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Process a folder\n",
     "\n",
-    "start = time.time()\n",
-    "# Process the file.\n",
-    "pipeline.process_file(in_file, out_file)\n",
-    "end = time.time()\n",
-    "print(f'Tile labelled in {end-start:.2f} seconds.')"
+    "It is also possible to process all LAS files in a folder in one batch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8c1b35f-f83b-4ce8-9733-217ab9b554a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select the folder to process.\n",
+    "las_folder = '../datasets/pointcloud/'\n",
+    "out_folder = '../datasets/pointcloud/'\n",
+    "# Only files starting with the specified prefix will be processed.\n",
+    "in_prefix = 'filtered_'\n",
+    "# The prefix will be replaced for processed files (otherwise the input might be overwritten).\n",
+    "out_prefix = 'processed_'\n",
+    "\n",
+    "# Re-set logging to suppress console output.\n",
+    "log_utils.reset_logger()\n",
+    "\n",
+    "# Only ERROR messages will be printed to console.\n",
+    "log_utils.add_console_logger(level=logging.ERROR)\n",
+    "# All messages will be printed to a file. Use `clear_log` flag to clear the log file, if desired.\n",
+    "log_utils.add_file_logger(logfile, clear_log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d5a34cc-97d2-4711-81d2-048ffc62336b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.process_folder(in_folder=las_folder, out_folder=out_folder, in_prefix=in_prefix, out_prefix=out_prefix)"
    ]
   },
   {
