Building fuser using both BGT and AHN.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -45,6 +45,8 @@
     "ahn_data_folder = '../datasets/ahn/'\n",
     "# File with BGT road polygons.\n",
     "bgt_road_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
+    "# File with BGT building polygons.\n",
+    "bgt_building_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
     "# File with <x,y> coordinates of pole-like objects.\n",
     "bgt_point_file = '../datasets/bgt/custom_points_demo.csv'\n",
     "\n",
@@ -93,9 +95,8 @@
     "# Ground fuser using pre-processed AHN data.\n",
     "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
     "                                   method='npz', target='ground', epsilon=0.2)\n",
-    "# Building fuser using pre-processed AHN data.\n",
-    "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder,\n",
-    "                                     method='npz', target='building', epsilon=0.2)"
+    "# Building fuser using BGT building footprint data and AHN data for the maximum height, if available.\n",
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=0.25, bgt_file=bgt_building_file, ahn_reader=ahn_reader)"
    ]
   },
   {
@@ -140,7 +141,7 @@
     "# Car fuser using a clustering algorithm and BGT road data.\n",
     "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
     "                            bgt_file=bgt_road_file, octree_level=10,\n",
-    "                            min_component_size=1000, max_above_ground=3,\n",
+    "                            min_component_size=3000, max_above_ground=3,\n",
     "                            min_width_thresh=1.5, max_width_thresh=2.55,\n",
     "                            min_length_thresh=2.0, max_length_thresh=7.0)"
    ]
@@ -209,8 +210,8 @@
    "outputs": [],
    "source": [
     "# We can also do this separately for the top and bottom since the best settings for each might differ.\n",
-    "building_top_params = {'plane_height': 2., 'octree_level': 10, 'threshold': 0.1}\n",
-    "building_bottom_params = {'plane_height': 2., 'octree_level': 10, 'threshold': 0.8}\n",
+    "building_top_params = {'plane_height': 12., 'octree_level': 9, 'threshold': 0.5}\n",
+    "building_bottom_params = {'plane_height': 12., 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
     "building_grower = growing.TopBottomLCC(Labels.BUILDING, ahn_reader, \n",
     "                                       top_params=building_top_params, \n",
@@ -273,7 +274,7 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, noise_filter, npz_building_fuser, car_fuser, tree_fuser,\n",
+    "process_sequence = (npz_ground_fuser, noise_filter, bgt_building_fuser, car_fuser, tree_fuser,\n",
     "                    light_fuser, sign_fuser, building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(process_sequence)"
    ]
